ch5 minor edits

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -258,8 +258,9 @@ that observation as benign or malignant? Based on the scatter plot, how might
 you classify that new observation? If the standardized concavity and perimeter
 values are 1 and 1 respectively, the point would lie in the middle of the
 orange cloud of malignant points and thus we could probably classify it as
-malignant. Based on our visualization, it seems like 
-the *prediction of an unobserved label* might be possible.
+malignant. Based on our visualization, it seems like it may be possible
+to make accurate predictions of the `Class` variable (i.e., a diagnosis) for
+tumor images with unknown diagnoses.
 
 ## Classification with $K$-nearest neighbors
 
@@ -1084,9 +1085,12 @@ To better illustrate the problem, let's revisit the scaled breast cancer data,
 `cancer`; except now we will remove many of the observations of malignant tumors, simulating
 what the data would look like if the cancer was rare. We will do this by
 picking only 3 observations from the malignant group, and keeping all
-of the benign observations. We choose these 3 observations using the `slice_head`
+of the benign observations. 
+We choose these 3 observations using the `slice_head`
 function, which takes two arguments: a data frame-like object,
 and the number of rows to select from the top (`n`).
+We will use the `bind_rows` function to glue the two resulting filtered
+data frames back together, and name the result `rare_cancer`.
 The new imbalanced data is shown in Figure \@ref(fig:05-unbalanced).
 
 ```{r 05-unbalanced-seed, echo = FALSE, fig.height = 3.5, fig.width = 4.5, warning = FALSE, message = FALSE}
