--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -966,12 +966,12 @@ Classification algorithms use one or more quantitative variables to predict the
 value of another categorical variable. In particular, the $K$-nearest neighbors algorithm 
 does this by first finding the $K$ points in the training data nearest
 to the new observation, and then returning the majority class vote from those
-training observations. We can evaluate a classifier by splitting the data
-randomly into a training and test data set, using the training set to build the
-classifier, and using the test set to estimate its accuracy. Finally, we
-can tune the classifier (e.g., select the number of neighbors $K$ in $K$-NN)
-by maximizing estimated accuracy via cross-validation. The overall 
-process is summarized in Figure \@ref(fig:06-overview).
+training observations. We can tune and evaluate a classifier by splitting the data randomly into a
+training and test data set. The training set is used to build the classifier,
+and we can tune the classifier (e.g., select the number of neighbors in $K$-NN)
+by maximizing estimated accuracy via cross-validation. After we have tuned the
+model we can use the test set to estimate its accuracy.
+The overall process is summarized in Figure \@ref(fig:06-overview).
 
 ```{r 06-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "Overview of KNN classification.", fig.retina = 2, out.width = "100%"}
 knitr::include_graphics("img/train-test-overview.jpeg")
