added missing text in vsn ctl for add collaborator

--- a/source/version-control.Rmd
+++ b/source/version-control.Rmd
@@ -726,7 +726,7 @@ image_read("img/version_control/add_collab_02.png") |>
   image_crop("3584x1200")
 ```
 
-(Figure \@ref(fig:add-collab-03)).
+Then click the green "Invite a collaborator" button (Figure \@ref(fig:add-collab-03)).
 
 (ref:add-collab-03) The "Invite a collaborator" button on the GitHub web interface.
 
