--- a/source/reading.Rmd
+++ b/source/reading.Rmd
@@ -365,9 +365,9 @@ Data frames in R need to have column names.  Thus if you read in data that
 don't have column names, R will assign names automatically. In the example
 above, R assigns each column a name of `X1, X2, X3, X4, X5, X6`.
 
-It is best to rename your columns to help differentiate between them 
-(e.g., `X1, X2`, etc., are not very descriptive names and will make it more confusing as
-you code). To rename your columns, you can use the `rename` function
+It is best to rename your columns manually in this scenario. The current
+column names (`X1, X2`, etc.) are not very descriptive and will make your analysis confusing.
+To rename your columns, you can use the `rename` function
 \index{rename} from [the `dplyr` R package](https://dplyr.tidyverse.org/) [@dplyr]
  \index{dplyr} (one of the packages
 loaded with `tidyverse`, so we don't need to load it separately). The first
