improving writing in 2.4.3, 2.4.4, 2.4.5, etc

--- a/source/reading.Rmd
+++ b/source/reading.Rmd
@@ -318,13 +318,13 @@ function depending on the file format, our resulting data frame
 
 ### `read_delim` as a more flexible method to get tabular data into R
 
-`read_csv` and `read_tsv` are actually just special cases of the more general
+The `read_csv` and `read_tsv` functions are actually just special cases of the more general
 `read_delim` \index{read function!read\_delim} function. We can use
-`read_delim` to import both comma and tab-separated files (and more), we just
-have to specify the delimiter. The `can_lang.tsv` is a different version of
+`read_delim` to import both comma and tab-separated values files, and more; we just
+have to specify the delimiter. 
+For example, the `can_lang.tsv` file contains a different version of
 this same data set with no column names and uses tabs as the delimiter
 \index{reading!delimiter} instead of commas. 
-
 Here is how the file would look in a plain text editor:
 
 ```code
@@ -340,13 +340,13 @@ Non-Official & Non-Aboriginal languages Amharic 22465   12785   200 33670
 Non-Official & Non-Aboriginal languages Arabic  419890  223535  5585    629055
 ```
 
-To get this into R using the `read_delim` function, we specify the first
-argument as the path to the file (as done with `read_csv`), and then provide
-values to the `delim` \index{read function!delim argument} argument (here a
-tab, which we represent by `"\t"`) and the `col_names` argument (here we
-specify that there are no column names to assign, and give it the value of
-`FALSE`). `read_csv`, `read_tsv` and `read_delim` have a `col_names` argument
-\index{read function!col\_names argument} and the default is `TRUE`. 
+To read this into R using the `read_delim` function, we specify the path 
+to the file as the first argument, provide
+the tab character `"\t"` as the `delim` argument \index{read function!delim argument},
+and set the `col_names` argument to `FALSE` to denote that there are no column names
+provided in the data. Note that the `read_csv`, `read_tsv`, and `read_delim` functions
+all have a `col_names` argument \index{read function!col\_names argument} with 
+the default value `TRUE`. 
 
 > **Note:** `\t` is an example of an *escaped character*, 
 > which always starts with a backslash (`\`). \index{escape character}
@@ -361,10 +361,9 @@ canlang_data
 ```
 
 
-Data frames in R need to have column names.  Thus if you read in data that
-don't have column names, R will assign names automatically. In the example
-above, R assigns each column a name of `X1, X2, X3, X4, X5, X6`.
-
+Data frames in R need to have column names.  Thus if you read in data 
+without column names, R will assign names automatically. In this example,
+R assigns the column names `X1, X2, X3, X4, X5, X6`.
 It is best to rename your columns manually in this scenario. The current
 column names (`X1, X2`, etc.) are not very descriptive and will make your analysis confusing.
 To rename your columns, you can use the `rename` function
