+ to - in naming counterexample

--- a/source/intro.Rmd
+++ b/source/intro.Rmd
@@ -319,14 +319,14 @@ my_number + 2
 
 Object names \index{object} can consist of letters, numbers, periods `.` and underscores `_`.
 Other symbols won't work since they have their own meanings in R. For example,
-`+` is the addition symbol; if we try to assign a name with
-the `+` symbol, R will complain and we will get an error!
+`-` is the subtraction symbol; if we try to assign a name with
+the `-` symbol, R will complain and we will get an error!
 
 ```{r, eval = F}
-na + me <- 1
+my-number <- 1
 ```
 ```
-Error: unexpected assignment in "na+me <-"
+Error in my - number <- 1 : object 'my' not found
 ```
 
 There are certain conventions for naming objects in R. 
