nicer worksheets url

--- a/source/inference.Rmd
+++ b/source/inference.Rmd
@@ -1170,7 +1170,7 @@ statistical techniques you may learn about in the future!
 
 Practice exercises for the material covered in this chapter 
 can be found in the accompanying 
-[worksheets repository](https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets#readme)
+[worksheets repository](https://worksheets.datasciencebook.ca)
 in the two "Statistical inference" rows.
 You can launch an interactive version of each worksheet in your browser by clicking the "launch binder" button.
 You can also preview a non-interactive version of each worksheet by clicking "view worksheet."
