--- a/source/regression1.Rmd
+++ b/source/regression1.Rmd
@@ -854,7 +854,7 @@ regression has both strengths and weaknesses. Some are listed here:
 
 Practice exercises for the material covered in this chapter 
 can be found in the accompanying 
-[worksheets repository](https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets#readme)
+[worksheets repository](https://worksheets.datasciencebook.ca)
 in the "Regression I: K-nearest neighbors" row.
 You can launch an interactive version of the worksheet in your browser by clicking the "launch binder" button.
 You can also preview a non-interactive version of the worksheet by clicking "view worksheet."
