--- a/source/wrangling.Rmd
+++ b/source/wrangling.Rmd
@@ -1610,7 +1610,7 @@ Table: (#tab:summary-functions-table) Summary of wrangling functions
 
 Practice exercises for the material covered in this chapter 
 can be found in the accompanying 
-[worksheets repository](https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets#readme)
+[worksheets repository](https://worksheets.datasciencebook.ca)
 in the "Cleaning and wrangling data" row.
 You can launch an interactive version of the worksheet in your browser by clicking the "launch binder" button.
 You can also preview a non-interactive version of the worksheet by clicking "view worksheet."
