more link updating

--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -171,7 +171,7 @@ conda env update --file https://raw.githubusercontent.com/UBC-DSCI/data-science-
 
 This command installs the specific R and package versions specified in
 the `environment.yml` file found in 
-[the worksheets repository](https://ubc-dsci.github.io/data-science-a-first-intro-worksheets).
+[the worksheets repository](https://worksheets.datasciencebook.ca).
 We will always keep the versions in the `environment.yml` file updated
 so that they are compatible with the exercise worksheets that accompany the book.
 
