move float pkg latex explicitly to preamble

--- a/source/preamble.tex
+++ b/source/preamble.tex
@@ -1,5 +1,6 @@
 \usepackage{booktabs}
 \usepackage{longtable}
+\usepackage{float}
 \usepackage[bf,singlelinecheck=off]{caption}
 \usepackage[scale=.7]{sourcecodepro}
 
