fix can_lang_tab vs can_lang tsv filename

--- a/source/reading.Rmd
+++ b/source/reading.Rmd
@@ -284,7 +284,7 @@ The column names began at line 4, so we skipped the first three lines.
 ### `read_tsv` to read in tab-separated values files
 
 Another common way data is stored is with tabs as the delimiter. Notice the
-data file, `can_lang_tab.tsv`, has tabs in between the columns instead of
+data file, `can_lang.tsv`, has tabs in between the columns instead of
 commas. 
 
 ```code
@@ -305,7 +305,7 @@ We can use the `read_tsv` function
 to read in `.tsv` (**t**ab **s**eparated **v**alues) files. 
 
 ```{r 01-read-tab}
-canlang_data <- read_tsv("data/can_lang_tab.tsv")
+canlang_data <- read_tsv("data/can_lang.tsv")
 canlang_data
 ```
 
@@ -322,7 +322,7 @@ The `read_csv` and `read_tsv` functions are actually just special cases of the m
 `read_delim` \index{read function!read\_delim} function. We can use
 `read_delim` to import both comma and tab-separated values files, and more; we just
 have to specify the delimiter. 
-For example, the `can_lang.tsv` file contains a different version of
+For example, the `can_lang_no_names.tsv` file contains a different version of
 this same data set with no column names and uses tabs as the delimiter
 \index{reading!delimiter} instead of commas. 
 Here is how the file would look in a plain text editor:
@@ -354,7 +354,7 @@ the default value `TRUE`.
 > (like the tab) or those with special meanings (such as quotation marks). 
 
 ```{r}
-canlang_data <- read_delim("data/can_lang.tsv", 
+canlang_data <- read_delim("data/can_lang_no_names.tsv", 
                            delim = "\t", 
                            col_names = FALSE)
 canlang_data
