fix axes labels in classification 1 last fig -- not standardized

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -1409,8 +1409,8 @@ wkflw_plot <-
              alpha = 0.02, 
              size = 5) +
   labs(color = "Diagnosis", 
-       x = "Area (standardized)", 
-       y = "Smoothness (standardized)") +
+       x = "Area", 
+       y = "Smoothness") +
   scale_color_manual(labels = c("Malignant", "Benign"), 
                      values = c("orange2", "steelblue2")) +
   theme(text = element_text(size = 12))
