minor wording edit class1 python sync

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -213,7 +213,8 @@ Before we start doing any modeling, let's explore our data set. Below we use
 the `group_by`, `summarize` and `n` \index{group\_by}\index{summarize} functions to find the number and percentage 
 of benign and malignant tumor observations in our data set. The `n` function within
 `summarize`, when paired with `group_by`, counts the number of observations in each `Class` group. 
-Then we calculate the percentage in each group by dividing by the total number of observations. We have 357 (63\%) benign and 212 (37\%) malignant tumor observations.
+Then we calculate the percentage in each group by dividing by the total number of observations
+and multiplying by 100. We have 357 (63\%) benign and 212 (37\%) malignant tumor observations.
 ```{r 05-tally}
 num_obs <- nrow(cancer)
 cancer |>
