more direct wording in viz

--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -920,7 +920,7 @@ are hard to distinguish, and the names of the landmasses are obscuring each
 other as they have been squished into too little space. But remember that the
 question we asked was only about the largest landmasses; let's make the plot a
 little bit clearer by keeping only the largest 12 landmasses. We do this using
-the `slice_max` function.  Then to help us make sure the labels have enough
+the `slice_max` function.  Then to give the labels enough
 space, we'll use horizontal bars instead of vertical ones. We do this by
 swapping the `x` and `y` variables:
 \index{slice\_max}
