viz wording improvement

--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -935,10 +935,10 @@ islands_bar
 
 The plot in Figure \@ref(fig:03-data-islands-bar-2) is definitely clearer now, 
 and allows us to answer our question 
-("are the top 7 largest landmasses continents?") in the affirmative. 
-But the question could be made clearer from the plot 
-by organizing the bars not by alphabetical order
-but by size, and to color them based on whether they are a continent. 
+("Are the top 7 largest landmasses continents?") in the affirmative. 
+However, we could still improve this visualization by organizing
+the bars by landmass size rather than by alphabetical order,
+and by coloring the bars based on whether they correspond to a continent.
 The data for this is stored in the `landmass_type` column. 
 To use this to color the bars, 
 we add the `fill` argument to the aesthetic mapping 
