re-added egg for grid plots in clustering

--- a/source/clustering.Rmd
+++ b/source/clustering.Rmd
@@ -6,6 +6,7 @@ library(RColorBrewer)
 library(gridExtra)
 library(cowplot)
 library(broom)
+library(egg)
 
 
 #center breaks latex here
@@ -440,8 +441,7 @@ sum of WSSDs over all the clusters, i.e., the \index{WSSD!total} *total WSSD*:
 
 These two steps are repeated until the cluster assignments no longer change.
 We show what the first four iterations of K-means would look like in
-Figure \@ref(fig:10-toy-kmeans-iter). 
-There each row corresponds to an iteration,
+Figure \@ref(fig:10-toy-kmeans-iter). There each row corresponds to an iteration,
 where the left column depicts the center update, 
 and the right column depicts the reassignment of data to clusters.
 
