filled circle fontawesome code update

--- a/source/jupyter.Rmd
+++ b/source/jupyter.Rmd
@@ -140,7 +140,7 @@ been created for Jupyter, which means that Jupyter can interpret and execute
 the code of many different programming languages. To run R code, your notebook 
 will need an R kernel. In the top right of your window, you can see a circle 
 that indicates the status of your kernel. If the circle is empty (`r fa("circle", fill = "white", stroke = "black", stroke_width = "10px", height = "11px")`), 
-the kernel is idle and ready to execute code. If the circle is filled in (`r fa("circle", fill = "black", stroke = "black", stroke_width = "10px", height = "12px")`), 
+the kernel is idle and ready to execute code. If the circle is filled in (`r fa("fas fa-circle", fill = "black", stroke = "black", stroke_width = "10px", height = "12px")`), 
 the kernel is busy running some code.
 
 You may run into problems where your kernel \index{kernel!interrupt, restart} is stuck for an excessive amount 
