remove non-rendering text collaborator username

--- a/source/version-control.Rmd
+++ b/source/version-control.Rmd
@@ -743,7 +743,7 @@ image_read("img/version_control/add_collab_04.png") |>
   image_crop("3584x1250")
 ```
 
-Finally, click the green "Add <COLLABORATORS_GITHUB_USER_NAME> to this repository" button (Figure \@ref(fig:add-collab-05)).
+Finally, click the green "Add collaborator to this repository" button (Figure \@ref(fig:add-collab-05)).
 
 ```{r add-collab-05, fig.pos = "H", out.extra="", fig.cap = 'The confirmation button for adding a collaborator to a repository on the GitHub web interface.', fig.retina = 2, out.width="100%"}
 image_read("img/version_control/add_collab_05.png") |>
