--- a/source/preamble.tex
+++ b/source/preamble.tex
@@ -3,6 +3,7 @@
 \usepackage{float}
 \usepackage[bf,singlelinecheck=off]{caption}
 \usepackage[scale=.7]{sourcecodepro}
+\usepackage{url}
 
 \usepackage{framed,color}
 \definecolor{shadecolor}{RGB}{248,248,248}
@@ -14,7 +15,7 @@
 
 \renewenvironment{quote}{\begin{VF}}{\end{VF}}
 \let\oldhref\href
-\renewcommand{\href}[2]{#2\footnote{\url{#1}}}
+\newcommand{\href}[2]{#2\footnote{\url{#1}}}
 
 \makeatletter
 \newenvironment{kframe}{%
