--- a/source/preamble.tex
+++ b/source/preamble.tex
@@ -14,8 +14,11 @@
 \renewcommand{\floatpagefraction}{0.75}
 
 \renewenvironment{quote}{\begin{VF}}{\end{VF}}
+
+
+\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \let\oldhref\href
-\newcommand{\href}[2]{#2\footnote{\url{#1}}}
+\renewcommand{\href}[2]{#2\footnote{\url{#1}}}
 
 \makeatletter
 \newenvironment{kframe}{%
