comment out saved figs (avoid changing each build)

--- a/source/regression2.Rmd
+++ b/source/regression2.Rmd
@@ -524,7 +524,7 @@ if(!is_latex_output()){
 } else {
   scene = list(camera = list(eye = list(x = -2.1, y = -2.2, z = 0.75)))
   plot_3d <- plot_3d  |> layout(scene = scene)
-  save_image(plot_3d, "img/plot3d_linear_regression.png", scale = 10)
+  # save_image(plot_3d, "img/plot3d_linear_regression.png", scale = 10)
   knitr::include_graphics("img/plot3d_linear_regression.png")
 }
 ```
