moved frontmatter images into their own folder

--- a/source/preface.Rmd
+++ b/source/preface.Rmd
@@ -37,7 +37,7 @@ early before going on to make sure your computer is set up in such a way that yo
 try out the example code that we include throughout the book. 
 
 ```{r img-chapter-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Where are we going?", out.width="100%", fig.retina = 2, fig.align = "center"}
-knitr::include_graphics("img/chapter_overview.jpeg")
+knitr::include_graphics("img/frontmatter/chapter_overview.jpeg")
 ```
 
 Each chapter in the book has an accompanying worksheet that provides exercises
