moved reading imgs into their own folder

--- a/source/reading.Rmd
+++ b/source/reading.Rmd
@@ -96,7 +96,7 @@ using either a relative or an absolute path.  We show both choices
 below.\index{Happiness Report}
 
 ```{r file-system-for-export-to-intro-datascience, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Example file system.", fig.retina = 2, out.width="100%"}
-knitr::include_graphics("img/filesystem.jpeg")
+knitr::include_graphics("img/reading/filesystem.jpeg")
 ```
 
 **Reading `happiness_report.csv` using a relative path:**
@@ -563,7 +563,7 @@ last line doesn't show how many rows there are (R is trying to avoid performing
 expensive query operations), whereas the output for the `tibble` object does. 
 
 ```{r 01-ref-vs-tibble, echo = FALSE, message = FALSE, warning = FALSE, fig.align = "center", fig.cap = "Comparison of a reference to data in a database and a tibble in R.", fig.retina = 2, out.width="80%"}
-image_read("img/ref_vs_tibble/ref_vs_tibble.001.jpeg") |>
+image_read("img/reading/ref_vs_tibble.001.jpeg") |>
   image_crop("3632x1600")
 ```
 
@@ -869,7 +869,7 @@ website \index{Craigslist} and search for one-bedroom apartments,
 we should see something similar to Figure \@ref(fig:craigslist-human).
 
 ```{r craigslist-human, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Craigslist webpage of advertisements for one-bedroom apartments.", fig.retina = 2, out.width="100%"}
-knitr::include_graphics("img/craigslist_human.png")
+knitr::include_graphics("img/reading/craigslist_human.png")
 ```
 
 Based on what our browser shows us, it's pretty easy to find the size and price
@@ -878,7 +878,7 @@ using R, without any manual human effort or copying and pasting. We do this by
 examining the *source code* that the web server actually sent our browser to
 display for us. We show a snippet of it below; the 
 entire source 
-is [included with the code for this book](https://github.com/UBC-DSCI/introduction-to-datascience/blob/master/img/website_source.txt):
+is [included with the code for this book](https://github.com/UBC-DSCI/introduction-to-datascience/blob/main/img/reading/website_source.txt):
 
 ```html
         <span class="result-meta">
@@ -971,7 +971,7 @@ in its toolbar, and highlights all the other apartment
 prices that would be obtained using that selector (Figure \@ref(fig:sg1)).
 
 ```{r sg1, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Using the SelectorGadget on a Craigslist webpage to obtain the CCS selector useful for obtaining apartment prices.", fig.retina = 2, out.width="100%"}
-knitr::include_graphics("img/sg1.png")
+knitr::include_graphics("img/reading/sg1.png")
 ```
 
 If we then click the size of an apartment listing, SelectorGadget shows us
@@ -979,7 +979,7 @@ the `span` selector, and highlights many of the lines on the page; this indicate
 `span` selector is not specific enough to capture only apartment sizes (Figure \@ref(fig:sg3)). 
 
 ```{r sg3, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Using the SelectorGadget on a Craigslist webpage to obtain a CCS selector useful for obtaining apartment sizes.", fig.retina = 2, out.width="100%"}
-knitr::include_graphics("img/sg3.png")
+knitr::include_graphics("img/reading/sg3.png")
 ```
 
 To narrow the selector, we can click one of the highlighted elements that
@@ -987,7 +987,7 @@ we *do not* want. For example, we can deselect the "pic/map" links,
 resulting in only the data we want highlighted using the `.housing` selector (Figure \@ref(fig:sg2)).
 
 ```{r sg2, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Using the SelectorGadget on a Craigslist webpage to refine the CCS selector to one that is most useful for obtaining apartment sizes.", fig.retina = 2, out.width="100%"}
-knitr::include_graphics("img/sg2.png")
+knitr::include_graphics("img/reading/sg2.png")
 ```
 
 So to scrape information about the square footage and rental price
@@ -1019,7 +1019,7 @@ We will use the SelectorGadget tool to pick elements that we are interested in
 interested in them (province names), as shown in Figure \@ref(fig:sg4).
 
 ```{r sg4, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Using the SelectorGadget on a Wikipedia webpage.", fig.retina = 2, out.width="100%"}
-knitr::include_graphics("img/sg4.png")
+knitr::include_graphics("img/reading/sg4.png")
 ```
 
 We include a link to a short video tutorial on this process at the end of the chapter
@@ -1163,7 +1163,7 @@ retweets from the [\@tidyverse](https://twitter.com/tidyverse) account. A few of
 are shown in Figure \@ref(fig:01-tidyverse-twitter).
 
 ```{r 01-tidyverse-twitter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "The tidyverse account Twitter feed.", fig.retina = 2, out.width="100%"}
-knitr::include_graphics("img/tidyverse_twitter.png")
+knitr::include_graphics("img/reading/tidyverse_twitter.png")
 ```
 
 **Stop! Think about your API usage carefully!**
@@ -1196,7 +1196,7 @@ you will see a browser pop-up that looks something like Figure \@ref(fig:01-tidy
 (ref:01-tidyverse-authorize) The `rtweet` authorization prompt.
 
 ```{r 01-tidyverse-authorize, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:01-tidyverse-authorize)", fig.retina = 2, out.width="100%"}
-knitr::include_graphics("img/authorize_question.png")
+knitr::include_graphics("img/reading/authorize_question.png")
 ```
 
 This is the `rtweet` package asking you to provide your own Twitter account's login information.
